@@ -62,7 +62,7 @@
    
    <!-- platform versions -->
    <equinox.ver>3.2.2</equinox.ver>
-   <kf.ver>2.0.3</kf.ver>
+   <kf.ver>2.0.4</kf.ver>
    <felix.ver>1.0.3</felix.ver>
    
    <!-- javadoc configuration -->
